# dir-diff

./: .gitmodules  README.md  main.cpp  meson.build
man/: dir-diff.1  extra.x  update.sh
src/: config.hpp.in  main.cpp  print.hpp  tree.cpp  tree.hpp
subprojects/wildmatch/: meson.build
